--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
           </div>
           <div class="frame-1">
             <span class="dash-board"
-              >D<br />A<br />S<br />H<br /><br />B<br />O<br />A<br />R<br />d</span
+              >P<br />O<br />R<br />T<br />F<br />O<br />L<br />I<br />O</span
             >
           </div>
           <div class="rectangle-2" onclick="showSection('monitor')"></div>
           <span class="project-brief"
-            >P<br />R<br />O<br />J<br />E<br />C<br />T<br /><br />B<br />R<br />I<br />E<br />F</span>
+            >D<br />A<br />S<br />H<br />B<br />O<br />A<br />R<br />D</span>
         </div>
         <div class="flex-column-3">
           <button class="group">
@@ -66,7 +66,7 @@
           <div class="image-e"></div>
           <div class="rectangle-f" onclick="showSection('monitor')"></div>
           <span class="projet-brief"
-            >P<br />R<br />O<br />J<br />E<br />T<br /><br />B<br />R<br />I<br />E<br />F</span
+            >D<br />A<br />S<br />H<br />B<br />O<br />A<br />R<br />D</span
           >
         </div>
         <span class="text"> </span>
@@ -94,7 +94,7 @@
             <div class="rectangle-12" onclick="showSection('portfolio')"></div>
             <div class="frame-13">
               <span class="dash-board-14"
-                >D<br />A<br />S<br />H<br /><br />B<br />O<br />A<br />R<br />d</span
+                >P<br />O<br />R<br />T<br />F<br />O<br />L<br />I<br />O</span
               >
             </div>
             <div class="rectangle-15" onclick="showSection('landing')"></div>
