--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <div class="flex-column-fa">
           <div class="rectangle-a" onclick="showSection('landing')"></div>
           <div class="image-b"></div>
+          <div class="image-esp"></div>
           <div class="rectangle-c" ></div>
           <span class="home-d">H<br />O<br />M<br />E<br /></span>
           <div class="image-e"></div>
