--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
 
 
-    <div id="dr" class="DRSWITCH">
+    <div id="dr_sw" class="DRSWITCH">
       <H2>Drawing room Switch Board</H2>
       <div class="Dsw1" onclick="toggleSwitch()">
         SW1
@@ -241,7 +241,7 @@
         </div> 
 
 
-<div id="light" class="dl">
+<div id="dr_lt" class="dl">                               
         <div class="Dl1" >
           DL1
         <img id="Dlimg1" src="./assets/images/light_off.png" alt="swoff" width="25" height="37.5">
@@ -269,9 +269,8 @@
             </div> 
 </div>
     </div>
-<br>
 
-<div id="so" class="soswitch">
+<div id="so_sw" class="soswitch">
       <H2>SIT-OUT Switch Board</H2>
       <div class="sosw1" onclick="toggleSwitch()">
         SW1
@@ -298,7 +297,7 @@
     <img id="soswimg6" src="./assets/images/sw_on.png" alt="swon" width="100" height="150">
     </div>
 
-<div id="light" class="SOl">
+<div id="SO_lt" class="SOl">
         <div class="SOl1" >
           SOL1
         <img id="SOlimg1" src="./assets/images/light_off.png" alt="swoff" width="25" height="37.5">
@@ -322,12 +321,103 @@
           </div> 
           <div class="SOl6">
             SOL6
-            <img id="SOlimg6" src="./assets/images/light_off.png" alt="swon" width="25" height="37.5">
+            <img id="SOlimg6" src="./assets/images/light_on.png" alt="swon" width="25" height="37.5">
             </div> 
 </div>
     </div>
 
+    <div id="entr_sw" class="entrswitch">
+    <H2>Entrance Right Switch Board</H2>
+    <div class="entrsw1" onclick="toggleSwitch()">
+      SW1
+    <img id="entrswimg1" src="./assets/images/sw_off.png" alt="swoff" width="100" height="150">
+      </div>
+    <div class="entrsw2" onclick="toggleSwitch()">
+      SW2
+      <img id="entrswimg2" src="./assets/images/sw_off.png" alt="swoff" width="100" height="150">
+      </div>
+      <div class="entrsw3" onclick="toggleSwitch()">
+        SW3
+      <img id="entrswimg2swimg3" src="./assets/images/sw_off.png" alt="swoff" width="100" height="150">
+    </div>
+  <div class="entrsw4" onclick="toggleSwitch()">
+    SW4
+    <img id="entrswimg4" src="./assets/images/sw_off.png" alt="swoff" width="100" height="150">
+    </div>
 
+<div id="entr_l" class="entrl">
+      <div class="entrl1" >
+      FRNT SS L1
+      <img id="entrlimg1" src="./assets/images/light_off.png" alt="swoff" width="25" height="37.5">
+        </div>
+      
+      <div class="entrl2">
+        FRNT SS L2
+        <img id="entrlimg2" src="./assets/images/light_off.png" alt="swon" width="25" height="37.5">
+        </div>
+        <div class="entrl3">
+        ENTR L3
+        <img id="entrlimg3" src="./assets/images/light_off.png" alt="swoff" width="25" height="37.5">
+      </div>
+    <div class="entrl4">
+      ENTR L4
+      <img id="entrlimg4" src="./assets/images/light_off.png" alt="swon" width="25" height="37.5">
+      </div>      
+</div>
+  </div>
+
+
+<div class="louverM"> 
+  <div class="breakerM">MBD<br> Curtain
+    <div id="startbtnM" onclick="">
+    <center> <img id="strtimg" src="./assets/images/strt_u.png" alt="start OFF" width="75" height="75"></center>
+    </div>
+    <div id="stopbtnM" onclick="">
+    <center> <img id="stpimg" src="./assets/images/stp_u.png" alt="stop OFF" width="75" height="75"></center>
+    </div>
+ </div>
+</div>
+
+  <div class="louver">
+  <div class="breakerC">CourtYard<br> Louver
+    <div id="startbtnC" onclick="">
+    <center> <img id="strtimg" src="./assets/images/strt_u.png" alt="start OFF" width="75" height="75"></center>
+    </div>
+    <div id="stopbtnC" onclick="">
+    <center> <img id="stpimg" src="./assets/images/stp_u.png" alt="stop OFF" width="75" height="75"></center>
+    </div>
+    </div>
+    <div class="breakerF">First Floor<br> Louver
+      <div id="startbtnF" onclick="">
+      <center> <img id="strtimg" src="./assets/images/strt_u.png" alt="start OFF" width="75" height="75"></center>
+      </div>
+      <div id="stopbtnF" onclick="">
+      <center> <img id="stpimg" src="./assets/images/stp_u.png" alt="stop OFF" width="75" height="75"></center>
+      </div>
+
+    </div>
+
+    <div class="breakerD">Dining<br> Curtain
+      <div id="startbtnD" onclick="">
+      <center> <img id="strtimg" src="./assets/images/strt_u.png" alt="start OFF" width="75" height="75"></center>
+      </div>
+      <div id="stopbtnD" onclick="">
+      <center> <img id="stpimg" src="./assets/images/stp_u.png" alt="stop OFF" width="75" height="75"></center>
+      </div>
+
+    </div>
+
+    <div class="breakerL">Living<br> Curtain
+      <div id="startbtnL" onclick="">
+      <center> <img id="strtimg" src="./assets/images/strt_u.png" alt="start OFF" width="75" height="75"></center>
+      </div>
+      <div id="stopbtnL" onclick="">
+      <center> <img id="stpimg" src="./assets/images/stp_u.png" alt="stop OFF" width="75" height="75"></center>
+      </div>
+
+    </div>
+
+</div>
         <div class="project-brief-171"></div>
         <div class="rectangle-181" onclick="showSection('landing')">
           <span class="home-191">HOME</span></div>
