--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
 
 <div id="switch" class="section">
   <div class="flex-row1">
+    <!-- <H1> MONITOR AND CONTROL LIGHT ,LOUVERS & CURTAIN</H1>-->
 
 
 
