--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
     <center> <img id="stpimg" src="./assets/images/stp_u.png" alt="stop OFF" width="50" height="50"></center>
     </div>
     </div>
-    <div class="breakerF">First Floor<br> Louver
+    <div class="breakerF">1st Floor<br> Louver
       <div id="startbtnF" onclick="">
       <center> <img id="strtimg" src="./assets/images/strt_u.png" alt="start OFF" width="50" height="50"></center>
       </div>
@@ -428,19 +428,21 @@
       data-width="110"
       data-height="110"
       data-min-value="0"
-      data-max-value="1000"
-      data-major-ticks="0,200,400,600,800,1000"
-      data-highlights='[{"from": 0, "to": 400, "color": "rgba(127, 223, 162, .75)"},{"from": 400, "to": 800, "color": "rgba(255, 245, 174, .75)"},
-              {"from": 800, "to": 1000, "color": "rgba(255, 50, 50, .75)"}]'
+      data-max-value="40"
+      data-major-ticks="0,8,16,24,32,40"
+      data-highlights='[{"from": 0, "to": 16, "color": "rgba(127, 223, 162, .75)"},{"from": 16, "to": 32, "color": "rgba(255, 245, 174, .75)"},
+              {"from": 32, "to": 40, "color": "rgba(255, 50, 50, .75)"}]'
       data-value="0"
-      data-units="Volt"
-      data-title="Drive Voltage"
+      data-units="Amp"
+      data-title="Ampere"
       data-animation-rule="linear"
       ></canvas>
 
     </div>
 
-
+<div id="plan" class="pln">
+  <center> <img id="planimg" src="./assets/images/Electrical.png" alt="start OFF" width="400" height="400"></center>
+</div>
 
 
 
