--- a/index.html
+++ b/index.html
@@ -354,11 +354,14 @@
 <div id="curtain" class="Switch">
 <div class="louverM"> 
   <div class="breakerM">MBD<br> Curtain
-    <div id="startbtnM" onclick="">
-    <center> <img id="strtimg" src="./assets/images/strt_u.png" alt="start OFF" width="50" height="50"></center>
+    <div id="openbtnM" onclick="">
+    <center> <img id="openimgM" src="./assets/images/open_u.png" alt="start OFF" width="50" height="50"></center>
     </div>
     <div id="stopbtnM" onclick="">
-    <center> <img id="stpimg" src="./assets/images/stp_u.png" alt="stop OFF" width="50" height="50"></center>
+    <center> <img id="stpimgM" src="./assets/images/stp_u.png" alt="stop OFF" width="50" height="50"></center>
+    </div>
+    <div id="closebtnM" onclick="">
+    <center> <img id="closeimgM" src="./assets/images/close_u.png" alt="stop OFF" width="50" height="50"></center>
     </div>
  </div>
 </div>
@@ -366,41 +369,52 @@
 <div id="louvers" class="Switch">
   <div class="louver">
   <div class="breakerC">CourtYard<br> Louver
-    <div id="startbtnC" onclick="">
-    <center> <img id="strtimg" src="./assets/images/strt_u.png" alt="start OFF" width="50" height="50"></center>
+    <div id="openbtnC" onclick="">
+    <center> <img id="openimgC" src="./assets/images/open_u.png" alt="start OFF" width="50" height="50"></center>
     </div>
     <div id="stopbtnC" onclick="">
-    <center> <img id="stpimg" src="./assets/images/stp_u.png" alt="stop OFF" width="50" height="50"></center>
+    <center> <img id="stpimgC" src="./assets/images/stp_u.png" alt="stop OFF" width="50" height="50"></center>
     </div>
+    <div id="closebtnC" onclick="">
+      <center> <img id="closeimgC" src="./assets/images/close_u.png" alt="stop OFF" width="50" height="50"></center>
+      </div>
     </div>
+    
     <div class="breakerF">1st Floor<br> Louver
-      <div id="startbtnF" onclick="">
-      <center> <img id="strtimg" src="./assets/images/strt_u.png" alt="start OFF" width="50" height="50"></center>
+      <div id="openbtnF" onclick="">
+      <center> <img id="openimgF" src="./assets/images/open_u.png" alt="start OFF" width="50" height="50"></center>
       </div>
       <div id="stopbtnF" onclick="">
-      <center> <img id="stpimg" src="./assets/images/stp_u.png" alt="stop OFF" width="50" height="50"></center>
+      <center> <img id="stpimgF" src="./assets/images/stp_u.png" alt="stop OFF" width="50" height="50"></center>
       </div>
-
+      <div id="closebtnF" onclick="">
+        <center> <img id="closeimgF" src="./assets/images/close_u.png" alt="stop OFF" width="50" height="50"></center>
+        </div>
     </div>
 
     <div class="breakerD">Dining<br> Curtain
-      <div id="startbtnD" onclick="">
-      <center> <img id="strtimg" src="./assets/images/strt_u.png" alt="start OFF" width="50" height="50"></center>
+      <div id="openbtnD" onclick="">
+      <center> <img id="openimgD" src="./assets/images/open_u.png" alt="start OFF" width="50" height="50"></center>
       </div>
       <div id="stopbtnD" onclick="">
-      <center> <img id="stpimg" src="./assets/images/stp_u.png" alt="stop OFF" width="50" height="50"></center>
+      <center> <img id="stpimgD" src="./assets/images/stp_u.png" alt="stop OFF" width="50" height="50"></center>
       </div>
-
+      <div id="closebtnD" onclick="">
+        <center> <img id="closeimgD" src="./assets/images/close_u.png" alt="stop OFF" width="50" height="50"></center>
+        </div>
     </div>
 
     <div class="breakerL">Living<br> Curtain
-      <div id="startbtnL" onclick="">
-      <center> <img id="strtimg" src="./assets/images/strt_u.png" alt="start OFF" width="50" height="50"></center>
+      <div id="openbtnL" onclick="">
+      <center> <img id="openimgL" src="./assets/images/open_u.png" alt="start OFF" width="50" height="50"></center>
       </div>
       <div id="stopbtnL" onclick="">
-      <center> <img id="stpimg" src="./assets/images/stp_u.png" alt="stop OFF" width="50" height="50"></center>
+      <center> <img id="stpimgL" src="./assets/images/stp_u.png" alt="stop OFF" width="50" height="50"></center>
       </div>
-</div>       
+      <div id="closebtnL" onclick="">
+        <center> <img id="closeimgL" src="./assets/images/close_u.png" alt="stop OFF" width="50" height="50"></center>
+        </div>
+    </div>       
     </div>
     </div>
 
