--- a/index.html
+++ b/index.html
@@ -466,7 +466,10 @@
 <div id="LIVING-C" class="LIVING_C" onclick="showSwitch('louvers')"></div>
 <div id="MBD-C" class="MBD_C" onclick="showSwitch('curtain')"></div>
 </div>
-.
+
+<div id="swdtls" class="swdetail">
+  <center> <img id="planimg" src="./assets/images/SWITCH COLORS.png" alt="start OFF" width="280" height="200"></center>
+</div>
 
 
         <div class="project-brief-171"></div>
