--- a/index.html
+++ b/index.html
@@ -469,6 +469,12 @@
 
 <div id="swdtls" class="swdetail">
   <center> <img id="planimg" src="./assets/images/SWITCH COLORS.png" alt="start OFF" width="280" height="200"></center>
+<div class="mq-head"> <center><h3> MQTT JSON</h3></center></div>
+  <div id="mqtt-topic" class="mq-stat"> 
+</div>
+
+
+
 </div>
 
 
