--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <img id="swimg2" src="./assets/images/sw_off.png" alt="swon" width="50" height="75">
         <div class="Dl2">
           DL2
-          <img id="LTD2" src="./assets/images/light_on.png" alt="swon" width="15" height="25">
+          <img id="LTD2" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
           </div>
       
       </div>
@@ -247,7 +247,7 @@
       <img id="swimg4" src="./assets/images/sw_off.png" alt="swon" width="50" height="75">
       <div class="Dl4">
         DL4
-        <img id="LTD4" src="./assets/images/light_on.png" alt="swon" width="15" height="25">
+        <img id="LTD4" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
         </div>
     </div>
       
@@ -279,10 +279,10 @@
         </div>
     </div>
       <div class="sosw2" onclick="toggleSwitch('soswimg2','SOSW2')">     
-        <img id="soswimg2" src="./assets/images/sw_on.png" alt="swon" width="50" height="75">
+        <img id="soswimg2" src="./assets/images/sw_off.png" alt="swon" width="50" height="75">
         <div class="SOl2">
           SOL2
-          <img id="LTSO2" src="./assets/images/light_on.png" alt="swon" width="15" height="25">
+          <img id="LTSO2" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
           </div>
       </div>
         <div class="sosw3" onclick="toggleSwitch('soswimg3','SOSW3')">        
@@ -293,10 +293,10 @@
       </div>
       </div>
     <div class="sosw4" onclick="toggleSwitch('soswimg4','SOSW4')">     
-      <img id="soswimg4" src="./assets/images/sw_on.png" alt="swon" width="50" height="75">
+      <img id="soswimg4" src="./assets/images/sw_off.png" alt="swon" width="50" height="75">
       <div class="SOl4">
         SOL4
-        <img id="LTSO4" src="./assets/images/light_on.png" alt="swon" width="15" height="25">
+        <img id="LTSO4" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
         </div> 
     </div>
       <div class="sosw5" onclick="toggleSwitch('soswimg5','SOSW5')"> 
@@ -310,7 +310,7 @@
     <img id="soswimg6" src="./assets/images/sw_on.png" alt="swon" width="50" height="75">
     <div class="SOl6">
       SOL6
-      <img id="LTSO6" src="./assets/images/light_on.png" alt="swon" width="15" height="25">
+      <img id="LTSO6" src="./assets/images/light_off.png" alt="swon" width="15" height="25">
       </div> 
         </div>
         </div>
