--- a/index.html
+++ b/index.html
@@ -355,13 +355,13 @@
 <div class="louverM"> 
   <div class="breakerM">MBD<br> Curtain
     <div id="openbtnM" onclick="">
-    <center> <img id="openimgM" src="./assets/images/open_u.png" alt="start OFF" width="50" height="50"></center>
+    <center> <img id="lvrmbdo"  src="./assets/images/open_u.png" alt="start OFF" width="50" height="50"></center>
     </div>
     <div id="stopbtnM" onclick="">
-    <center> <img id="stpimgM" src="./assets/images/stp_u.png" alt="stop OFF" width="50" height="50"></center>
+    <center> <img id="lvrmbds" src="./assets/images/stp_u.png" alt="stop OFF" width="50" height="50"></center>
     </div>
     <div id="closebtnM" onclick="">
-    <center> <img id="closeimgM" src="./assets/images/close_u.png" alt="stop OFF" width="50" height="50"></center>
+    <center> <img id="lvrmbdc"  src="./assets/images/close_u.png" alt="stop OFF" width="50" height="50"></center>
     </div>
  </div>
 </div>
@@ -370,49 +370,49 @@
   <div class="louver">
   <div class="breakerC">CourtYard<br> Louver
     <div id="openbtnC" onclick="">
-    <center> <img id="openimgC" src="./assets/images/open_u.png" alt="start OFF" width="50" height="50"></center>
+    <center> <img id="lvrctdo" src="./assets/images/open_u.png" alt="start OFF" width="50" height="50"></center>
     </div>
     <div id="stopbtnC" onclick="">
-    <center> <img id="stpimgC" src="./assets/images/stp_u.png" alt="stop OFF" width="50" height="50"></center>
+    <center> <img id="lvrctds" src="./assets/images/stp_u.png" alt="stop OFF" width="50" height="50"></center>
     </div>
     <div id="closebtnC" onclick="">
-      <center> <img id="closeimgC" src="./assets/images/close_u.png" alt="stop OFF" width="50" height="50"></center>
+      <center> <img id="lvrctdc" src="./assets/images/close_u.png" alt="stop OFF" width="50" height="50"></center>
       </div>
     </div>
     
     <div class="breakerF">1st Floor<br> Louver
       <div id="openbtnF" onclick="">
-      <center> <img id="openimgF" src="./assets/images/open_u.png" alt="start OFF" width="50" height="50"></center>
+      <center> <img id="lvrffro" src="./assets/images/open_u.png" alt="start OFF" width="50" height="50"></center>
       </div>
       <div id="stopbtnF" onclick="">
-      <center> <img id="stpimgF" src="./assets/images/stp_u.png" alt="stop OFF" width="50" height="50"></center>
+      <center> <img id="lvrffrs" src="./assets/images/stp_u.png" alt="stop OFF" width="50" height="50"></center>
       </div>
       <div id="closebtnF" onclick="">
-        <center> <img id="closeimgF" src="./assets/images/close_u.png" alt="stop OFF" width="50" height="50"></center>
+        <center> <img id="lvrffrc" src="./assets/images/close_u.png" alt="stop OFF" width="50" height="50"></center>
         </div>
     </div>
 
     <div class="breakerD">Dining<br> Curtain
       <div id="openbtnD" onclick="">
-      <center> <img id="openimgD" src="./assets/images/open_u.png" alt="start OFF" width="50" height="50"></center>
+      <center> <img id="lvrdnro" src="./assets/images/open_u.png" alt="start OFF" width="50" height="50"></center>
       </div>
       <div id="stopbtnD" onclick="">
-      <center> <img id="stpimgD" src="./assets/images/stp_u.png" alt="stop OFF" width="50" height="50"></center>
+      <center> <img id="lvrdnrs" src="./assets/images/stp_u.png" alt="stop OFF" width="50" height="50"></center>
       </div>
       <div id="closebtnD" onclick="">
-        <center> <img id="closeimgD" src="./assets/images/close_u.png" alt="stop OFF" width="50" height="50"></center>
+        <center> <img id="lvrdnrc" src="./assets/images/close_u.png" alt="stop OFF" width="50" height="50"></center>
         </div>
     </div>
 
     <div class="breakerL">Living<br> Curtain
       <div id="openbtnL" onclick="">
-      <center> <img id="openimgL" src="./assets/images/open_u.png" alt="start OFF" width="50" height="50"></center>
+      <center> <img id="lvrlrmo" src="./assets/images/open_u.png" alt="start OFF" width="50" height="50"></center>
       </div>
       <div id="stopbtnL" onclick="">
-      <center> <img id="stpimgL" src="./assets/images/stp_u.png" alt="stop OFF" width="50" height="50"></center>
+      <center> <img id="lvrlrms" src="./assets/images/stp_u.png" alt="stop OFF" width="50" height="50"></center>
       </div>
       <div id="closebtnL" onclick="">
-        <center> <img id="closeimgL" src="./assets/images/close_u.png" alt="stop OFF" width="50" height="50"></center>
+        <center> <img id="lvrlrmc" src="./assets/images/close_u.png" alt="stop OFF" width="50" height="50"></center>
         </div>
     </div>       
     </div>
