--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 </div>
 <div id="louvers" class="Switch">
   <div class="louver">
-  <div class="breakerC">CourtYard<br> Louver
+  <div class="breakerC">CourtYard<br> 
     <div id="openbtnC" onclick="">
     <center> <img id="lvrctdo" src="./assets/images/open_u.png" alt="start OFF" width="50" height="50"></center>
     </div>
@@ -530,7 +530,19 @@
 </div>
 
 <div id="swdtls" class="swdetail">
-<center> <img id="planimg" src="./assets/images/iot colors_new.png" alt="start OFF" width="280" height="225"></center>
+  <div class="attn">
+  <b>ATTENTION! </b>
+    <br>
+    <br>
+    Please click WiFi icon in flooor plan to get Switch cnotrol
+    <br>
+    <br>
+    Click Setting button for MQTT Topic Setting
+    <br>
+    <br>
+<!---<img class="attnimg" src="./assets/images/wifi_switch_louver.png" alt="start OFF" width="25" height="25" > -->
+<!--<center> <img id="planimg" src="./assets/images/iot colors_new.png" alt="start OFF" width="280" height="225"></center> -->
+</div>
 <div class="mq-head"> <center><h3> MQTT JSON</h3></center></div>
   <div id="mqtt-topic" class="mq-stat"> 
 </div>
