--- a/index.html
+++ b/index.html
@@ -530,18 +530,14 @@
 </div>
 
 <div id="swdtls" class="swdetail">
-  <div class="attn">
-  <b>ATTENTION! </b>
-    <br>
-    <br>
-    Please click WiFi icon in flooor plan to get Switch cnotrol
-    <br>
-    <br>
-    Click Setting button for MQTT Topic Setting
-    <br>
-    <br>
-<!---<img class="attnimg" src="./assets/images/wifi_switch_louver.png" alt="start OFF" width="25" height="25" > -->
+  <div class="attnp">
+  <H2>ATTENTION! </H2>
+    
+<img class="attnimg" src="./assets/images/wifi_switch_mbd.png" alt="start OFF" width="40" height="40" > Click WiFi icons in plan to CNTRL SWITCHES
 <!--<center> <img id="planimg" src="./assets/images/iot colors_new.png" alt="start OFF" width="280" height="225"></center> -->
+<br>
+<img class="attnimg1" src="./assets/images/icons8-settings-48.png" alt="start OFF" width="40" height="40" > Click Set icon in plan for MQTT Topic setting
+
 </div>
 <div class="mq-head"> <center><h3> MQTT JSON</h3></center></div>
   <div id="mqtt-topic" class="mq-stat"> 
