added more topic in firebase

--- a/index.html
+++ b/index.html
@@ -434,6 +434,17 @@
         <input type="text"  class="setinginp"  id="cysw" name="userInput" placeholder="Enter CourtYard mqtt-topic" required> 
         <input type="text" class="setinginp" id="lrsw" name="userInput" placeholder="Enter LVNG Curtain  mqtt-topic" required> 
         <input type="text"  class="setinginp"  id="mrsw" name="userInput" placeholder="Enter MBDR Curtain mqtt-topic" required>
+        <input type="text" class="setinginp" id="dnglsw" name="userInput" placeholder="Enter Dining left  SW mqtt-topic" required> 
+        <input type="text"  class="setinginp"  id="pndsw" name="userInput" placeholder="Enter Pond  SW mqtt-topic" required> 
+        <input type="text" class="setinginp" id="dngrsw" name="userInput" placeholder="Enter Dinig Right SW mqtt-topic" required> 
+        <input type="text"  class="setinginp"  id="entlsw" name="userInput" placeholder="Enter ENTR Right Louver mqtt-topic" required> 
+        <input type="text" class="setinginp" id="khnsw" name="userInput" placeholder="Enter Kitchen SW mqtt-topic" required> 
+        <input type="text"  class="setinginp"  id="lvngsw" name="userInput" placeholder="Enter Living SW mqtt-topic" required> 
+        <input type="text" class="setinginp" id="mbrsw" name="userInput" placeholder="Enter Master Bed SW  mqtt-topic" required> 
+        <input type="text"  class="setinginp"  id="bdrsw" name="userInput" placeholder="Enter Bedroom SW mqtt-topic" required>
+        <input type="text" class="setinginp" id="wasw" name="userInput" placeholder="Enter Work Area SW mqtt-topic" required> 
+        <input type="text" class="setinginp" id="broker" name="userInput" placeholder="MQTT Broker URL" required>
+        
         <button class ="topicsave"type="submit">Save</button>
         
       </form>
